Se añadieron carpetas src y build

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 	<link rel="shortcut icon" href="ahegao icon.png">
 	<title>Prueba Bulma</title>
 	<script src="https://kit.fontawesome.com/62ea397d3a.js" crossorigin="anonymous"></script>
-  	<link rel="stylesheet" type="text/css" href="mybulma/css/mystyles.css">
+  	<link rel="stylesheet" type="text/css" href="../mybulma/css/mystyles.css">
 </head>
 <body>
 	<nav class="navbar">
@@ -84,6 +84,7 @@
 		<p class="is-size-7 has-text-centered">Copyright 2021 - Maki VirgoPagina</p>
 	</footer>
 	<script type="text/javascript" src="script.js"></script>
-	<script type="module" src="buttons.js"></script>
+	<script type="module" src="playlist.js"></script>
+	<script type="text/javascript" src="buttons.js"></script>
 </body>
 </html>
